--- a/0620/ex02/css/style.css
+++ b/0620/ex02/css/style.css
@@ -41,7 +41,7 @@ nav{float:right;margin-top:30px;padding:10px;}
     background-color: rgba(255,255,255,0.8);
     border-radius: 10px;
     left: 50%;
-    top: 50%;
+    top: 350px;
 }
 .welcome h1 span{color: #bb692d;}
 .welcome h3 span{color: #6a6a6a;}
